<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DiaStore</string>

    <!--region Welcome-->
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_subtitle">Glucose levels, meals and reports.\nAll in one place.</string>
    <!--endregion-->

    <!--region Login-->
    <string name="log_in_button_text">Log In</string>
    <string name="log_in_subtitle">We’re happy to see you back!</string>
    <string name="log_in_email_hint">Email</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_in_invalid_password_message">Password format invalid.</string>
    <string name="log_in_invalid_email_message">Email format invalid.</string>
    <!--endregion-->

    <!--region Sign Up-->
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_subtitle">Welcome!</string>
    <string name="sign_up_first_name_hint">First Name</string>
    <string name="sign_up_last_name_hint">Last name</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_already_registered_text">Already have an account? LogIn</string>
    <string name="sign_up_already_registered_login_text">LogIn</string>
    <string name="sign_up_log_in_bottom">Log In</string>
    <!--endregion-->

    <!--region About-->
    <string name="about">About</string>
    <string name="about_content"><![CDATA[\t\tDiaStore is an Android application designed to help people with diabetes better manage, review and note their glucose levels, meals and physical activity.\n\t\tHaving all these things properly stored in one place will help a person with diabetes when they need to make changes in their treatment, present their situation to the doctor that is supervising them and have a history of the treatment to look over and consult when they are unsure what to do in a certain situation.]]></string>
    <string name="about_terms_and_conditions_title">Terms &amp; Conditions</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <!--endregion-->

    <!--region Home-->
    <string name="home_title">Home</string>
    <string name="drawer_user_name_format">%s\n%s</string>
    <string name="drawer_food_item_title">Food</string>
    <string name="drawer_physical_item_title">Physical Activities</string>
    <string name="drawer_challenges_item_title">Challenges</string>
    <string name="drawer_profile_item_title">Profile</string>
    <string name="drawer_about_item_title">About</string>
    <string name="drawer_statistics_item_title">Statistics</string>
    <!--endregion-->


    <!--  region Challenges  -->
    <string name="challenges_title">Challenges</string>
    <string name="challenges_item_1">Keep your body in shape and your blood sugar in check by doing strength workouts!</string>
    <string name="challenges_item_2">Analyze your eating habits daily and try to improve the way you feel by improving your diet</string>
    <string name="challenges_item_3">Take a break from your daily routine and make time for a walk or a run. A little exercise goes a long way!</string>
    <string name="challenges_item_4">Keep track of how your body reacts to different foods and activities and try to make out the patterns. Yoy can learn more about your body every day!</string>
    <string name="challenges_item_5">There are new discoveries about diabetes every day! Take a few minutes to inform yourself about this, read about other people’s experiences.</string>
    <string name="challenges_item_6">Share! You are not alone in this! Reach out to give help or get help, there are plenty communities out there to share your experience.</string>
    <!--  endregion  -->

    <string name="carbs_template">Carbs: %d</string>
    <string name="insulin_template">Insulin: %.1f</string>
    <string name="sport_template">Sport: %dmin</string>
    <string name="blood_sugar_level_label_text">Blood sugar level:</string>
    <string name="carbs_label">Carbs:</string>
    <string name="insulin_label">Insulin intake:</string>
    <string name="physical_activity_label">Activity duration:</string>
    <string name="age_hint">Age</string>
    <string name="weight_hint">Weight</string>
    <string name="height_hint">Height</string>
    <string name="carbs_to_insulin_hint">Carbs to insulin ratio</string>
    <string name="bloodsugar_to_insulin_hint">Bloodsugar to insulin ratio</string>

    <!--region Entry-->
    <string name="entry_glucose_level">%dmg/dl</string>
    <string name="entry_carbs_field_title">Carbs</string>
    <string name="entry_insulin_field_title">Insulin</string>
    <string name="entry_sport_field_title">Sport</string>
    <string name="entry_time_field_title">Entry time:</string>
    <string name="entry_meal_type_display_breakfast">Breakfast</string>
    <string name="entry_meal_type_display_lunch">Lunch</string>
    <string name="entry_meal_type_display_dinner">Dinner</string>
    <string name="entry_meal_type_display_snack">Snack</string>
    <string name="entry_meal_type_display_none">meal</string>
    <string name="entry_moment_type_before">Before\u0020</string>
    <string name="entry_moment_type_after">After\u0020</string>

    <!--region EntryDetails-->
    <string name="entry_details_before_meal_option_label">Before meal</string>
    <string name="entry_details_after_meal_option_label">After meal</string>
    <string name="entry_details_moment_label">Entry moment</string>
    <string name="entry_details_meal_type_label">Meal type</string>
    <string name="entry_details_breakfast_label">Breakfast</string>
    <string name="entry_details_lunch_label">Lunch</string>
    <string name="entry_details_dinner_label">Dinner</string>
    <string name="entry_details_snack_label">Snack</string>
    <string name="entry_details_done_button_text">Done</string>
    <string name="entry_details_blood_glucose_field_hint">mg/dl</string>
    <string name="entry_details_carbs_field_hint">0g</string>
    <string name="entry_details_insulin_field_hint">ui</string>
    <string name="entry_details_physical_activity_field_hint">min.</string>

    <!--region OnBoarding-->
    <string name="on_boarding_title">About You</string>
    <string name="on_boarding_button_confirm">Confirm</string>

    <!--region Profile-->
    <string name="profile_bottom_sheet_dialog_age_title">Age</string>
    <string name="profile_bottom_sheet_dialog_weight_title">Weight</string>
    <string name="profile_bottom_sheet_dialog_height_title">Height</string>
    <string name="profile_bottom_sheet_dialog_carbs_title">Carbs to insulin</string>
    <string name="profile_bottom_sheet_dialog_blood_sugar_title">Blood sugar to insulin</string>
    <string name="profile_bottom_sheet_dialog_confirm_button_text" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="profile_bottom_sheet_dialog_cancel_button_text">Cancel</string>
    <plurals name="profile_age_format">
        <item quantity="one">%d yr.</item>
        <item quantity="other">%d yrs.</item>
    </plurals>
    <string name="profile_title">Profile</string>
    <string name="profile_weight_format">%d kg</string>
    <string name="profile_height_format">%d cm</string>
    <string name="profile_carbs_format">%d ch</string>
    <string name="profile_blood_sugar_format">%d mg/dl</string>
    <string name="profile_user_name_format">%s %s</string>
    <string name="profile_field_label_name">Name</string>
    <string name="profile_field_label_email">Email</string>
    <string name="profile_field_label_age">Age</string>
    <string name="profile_field_label_weeight">Weight</string>
    <string name="profile_field_label_height">Height</string>
    <string name="profile_field_label_carbs_to_insulin">Carbs to insulin</string>
    <string name="profile_field_label_bloodsugar_to_insulin">Bloodsugar to insulin</string>
    <string name="profile_field_label_log_out">Log Out</string>
    <string name="profile_button_done">Done</string>

    <!--region BiometricPrompt-->
    <string name="biometric_prompt_authentication_title">DiaStore Authentication</string>
    <string name="biometric_prompt_authentication_subtitle">LogIn using your biometric credentials</string>
    <string name="biometric_prompt_authentication_negative_button_text">Cancel</string>
    <string name="biometric_prompt_authentication_authentication_failed_message">Fingerprint not recognized</string>
    <string name="error_message">Something went wrong. Try again later.</string>
</resources>
